--- a/proposal_5_cinematic/css/pages.css
+++ b/proposal_5_cinematic/css/pages.css
@@ -295,7 +295,7 @@
 .carousel-track img {
   min-width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .carousel-btn {
